src/test/deca/syntax/parser/valid/distributivite.deca
// Parser test, int x assigned an int

{
  int x = 2 * (1 + 3);
}
