src/test/deca/syntax/parser/invalid/instance_of_reserved_word.deca
// Parser test, instanceof should be followed by an IDENT not a special character

{
    x instanceof . ;
}